# django-clean-architecture

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.pro.yaml  docker-compose.test.yaml  docker-compose.yaml
docs/: forex.yaml
fixtures/: exchange_rate.json  provider.json
scripts/: entrypoint.sh  start_api.sh  start_worker.sh
src/domain/: constants.py  entities.py  exceptions.py  exchange_rate.py  provider.py
src/domain/core/: constants.py  routing.py
src/infrastructure/config/: settings.py
src/infrastructure/factories/: exchange_rates.py  provider.py
src/infrastructure/server/: __init__.py  celery.py  urls.py  wsgi.py
src/infrastructure/settings/: base.py  develop.py  development.py  production.py  test.py
src/interface/clients/: provider.py
src/interface/controllers/: exchange_rate.py  utils.py
src/interface/repositories/: exceptions.py  exchange_rate.py  provider.py
src/interface/routes/: constants.py  exchange_rate.py
src/interface/serializers/: exchange_rate.py
src/usecases/: exchange_rate.py  provider.py
tests/: fixtures.py
tests/domain/: test_exchange_rate_entities.py  test_provider_entities.py  test_routing.py
tests/interface/controllers/: test_exchange_rate_controllers.py
tests/interface/repositories/: test_exchange_rate_repositories.py  test_provider_repositories.py
tests/usecases/: test_exchange_rate_interactors.py  test_provider_interactors.py
(+62 files in other folders)
